2011-03-09 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCopt.c,
	  support/regression/tests/memory.c:
	  Fix for #3188357 from optralloc branch.

2011-03-06 Borut Razem <borut.razem AT gmail.com>

	* sim/ucsim/cmd.src/Makefile.in:
      fixed for bison, byacc and flex version 2.5.4

2011-03-05 Borut Razem <borut.razem AT gmail.com>

	* sim/ucsim/configure, sim/ucsim/cmd.src/cmdlexcl.h,
	  sim/ucsim/cmd.src/Makefile.in, sim/ucsim/cmd.src/newcmd.cc,
	  sim/ucsim/cmd.src/cmdset.cc, sim/ucsim/cmd.src/cmdlex.l,
	  sim/ucsim/cmd.src/newcmdposix.cc, sim/ucsim/cmd.src/newcmdwin32.cc,
	  sim/ucsim/cmd.src/cmdpars.y, sim/ucsim/configure.in:
	  use bison instead unsupported bison++
	* sim/ucsim/cmd.src/flex_lexer.h, sim/ucsim/cmd.src/cmdpars.cc,
	  sim/ucsim/cmd.src/cmdpars.h, sim/ucsim/cmd.src/FlexLexer.h,
	  sim/ucsim/cmd.src/cmdlex.cc: deleted

2011-03-03 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* sim/ucsim/z80.src/inst_cb.cc:
	  Fixed broken res b, a instruction.

2011-03-02 Borut Razem <borut.razem AT gmail.com>

	* src/SDCCmain.c, doc/sdccman.lyx:
	  fixed use of SDCC_LIB environment variable:
	  first search in $SDCC_LIB/<model>
	  then search in $SDCC_LIB

2011-02-24 Borut Razem <borut.razem AT gmail.com>

	* doc/sdccman.lyx: fixed bug #3191324: PIC instructions in documentation

2011-02-18 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/peeph-z80.def:
	  Minor peephole fix.

2011-02-20 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/gen.c (genCmp): removed regression, fixes bug 3090354

2011-01-19 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/bug-3184920.c:
	  Disabled for hc08.

2011-02-19 Maarten Brock <sourceforge.brock AT dse.nl>

	* debugger/mcs51/cmd.c,
	* debugger/mcs51/sdcdb.c,
	* debugger/mcs51/simi.c,
	* debugger/mcs51/symtab.c,
	* src/SDCCargs.h,
	* src/version.awk: cosmetic changes
	* src/pic14/gen.c (genDataPointerSet),
	* src/pic14/glue.c (emitIvals),